# csir-manipulation

./: ProjectHome.md
_wam_tutorial/_wam_arm_navigation/: mainpage.dox  manifest.xml
_wam_tutorial/_wam_description/: mainpage.dox  manifest.xml
_wam_tutorial/_wam_object_manipulation_tutorial/: mainpage.dox  manifest.xml
csir_intelligent_manipulator/: LICENSE  README.txt  arm_navigation.patch  arm_navigation_experimental.patch  backup_cf.sh  barrett-ros-pkg.patch  cf_install_1204.sh  gravitycal.conf  object_manipulation.patch  wam_planning_description.patch  zerocal.conf
csir_intelligent_manipulator/csir_powerbot_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
csir_intelligent_manipulator/csir_wam_arm_navigation/: mainpage.dox  manifest.xml
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/config/: rosdoc.yaml
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/doc/: Makefile  manifest.yaml
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/doc/source/: bhand_grasp_controller.rst  conf.py  index.rst
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/include/bhand_grasp_controller/: bhand_grasp_controller.h
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/launch/: bhand_grasp_posture_action.launch
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/src/: bhand_grasp_controller.cpp  bhand_grasp_controller.py  bhand_grasp_controller_main.cpp
csir_intelligent_manipulator/csir_wam_object_manipulation/bhand_grasp_controller/test/: cpp_bhand_grasp_controller.test  ntest_bhand_grasp_controller.cpp  ntest_bhand_grasp_controller.py  python_bhand_grasp_controller.test  utest_bhand_grasp_controller.cpp  utest_bhand_grasp_controller.py  utest_bhand_grasp_controller.test
csir_wam_description/: CMakeLists.txt  package.xml
wam_controllers/: CMakeLists.txt  package.xml
wam_demo/: CMakeLists.txt  package.xml
wam_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
wam_msgs/: CMakeLists.txt  package.xml
wam_node/: CMakeLists.txt  package.xml  wam_node.kdev4
wam_srvs/: CMakeLists.txt  package.xml
wam_teleop/: CMakeLists.txt  package.xml
(+109 files in other folders)
